# nix-config

./: .gitignore  .sops.yaml  README.md  e-imzo.nix  example.yaml  flake.nix  home.nix  justfile  pyproject.toml  result  shell.nix  uz
.github/workflows/: test.yml
darwin/: configuration.nix  flake.nix  hardware-configuration.nix  home.nix
hosts/darwin/: configuration.nix  home.nix
hosts/dell/: configuration.nix  disk-configuration.nix  flake.nix  hardware-configuration.nix  home.nix  modules.nix
hosts/matax/: configuration.nix  hardware-configuration.nix  home.nix  modules.nix
hosts/utm/: configuration.nix
modules/: default.nix  desktop.nix  gnome.nix  gnome_apps.nix  nixpkgs.nix  packages.nix  remote-builder.nix  sops.nix  tarjimonlar.nix  wallpapers.nix
modules/desktop/: apps.nix  boot.nix  default.nix  extensions.nix  fonts.nix  language.nix  network.nix  utils.nix  wallpapers.nix
modules/home/: default.nix  fish.nix  git.nix  haskell.nix  openssh.nix  packages.nix  ssh.nix  starship.nix  vscode.nix  zed.nix  zen-browser.nix  zsh.nix
modules/keyboard/: default.nix
modules/nixos/: default.nix  firejail.nix
modules/services/: default.nix  espanso.nix  tarjimonlar.nix
modules/users/: bahrom.nix  default.nix
nix-shells/rust/: Cargo.toml  LICENSE  default.nix  flake.nix  shell.nix
nixos/: configuration.nix  hardware-configuration.nix  home.nix
nixos/utm/: home.nix  (+2 more)
patches/: 0001-chore-add-gnome-extensioons-and-unstable-names.patch  README.md  test-2.patch  test-p.txt  test.patch
secrets/: secrets.yaml
test/: web.py
xinux/: default.nix
(+65 files in other folders)
